# sportmonks-py

./: .readthedocs.yaml  Changelog.md  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  requirements.txt
examples/: search_leagues.py
src/sportmonks_py/: base_client.py  core.py  fixture.py  leagues.py  misc.py  my.py  odds.py  standings.py  teams.py
src/sportmonks_py/client/: __init__.py  api_client.py  base_client.py
src/sportmonks_py/utils/: common_types.py  helper.py
tests/core/: core_test.py
tests/football/: test_football.py  test_football_async.py
