[project]
name = "sportmonks-py"
version = "0.1"
description = "A Python package to interact with the SportMonks API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "arrow>=1.3.0",
    "datetime>=5.5",
    "http-client>=0.1.22",
    "logging>=0.4.9.6",
    "pandas>=2.2.3",
    "polars>=1.14.0",
    "pytz>=2024.2",
    "responses>=0.25.3",
    "ruff>=0.8.2",
    "tzlocal>=5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
